# libbvrscan

./: .gitignore  CMakeLists.txt  README.md
assets/: .gitattributes  CMakeLists.txt  README.md  neural1.genann
assets/asset_gen/: main.c  main.m
assets/train/: main.py  neural_v1.c  neural_v1.h  v1_who.txt  v1_wih.txt
assets/train_genann/: train.c  train.m
imageio/include/: io.h
imageio/src/: io.c
include/: bvrcore.h
include/blob/: blob.h
include/filter/: filter.h
include/io/: io.h
include/matrix/: matrix.h
include/neural/: neural.h  neural_v1.h
include_private/: blob_private.h  bvrcore_private.h
src/blob/: blob.c
src/filter/: filter.c
src/io/: io.c
src/matrix/: matrix.c
src/neural/: neural.c  neural_v1.c
tests/: test.c
tests/samples/: neural1.genann
